--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,47 @@ src/.coverage
 *.toc
 
 *.log
+
+*.aux
+
+*.aux
+
+*.blg
+
+*.log
+
+*.out
+
+*.pdf
+
+*.gz
+
+*.bbl
+
+*.log
+
+*.pdf
+
+*.aux
+
+*.blg
+
+*.toc
+
+*.aux
+
+*.gz
+
+*.log
+
+foundations/fractions/02addition.log
+
+foundations/fractions/02addition.pdf
+
+foundations/fractions/03subtraction.log
+
+foundations/fractions/03subtraction.pdf
+
+foundations/fractions/04multiplication.log
+
+foundations/fractions/04multiplication.pdf
