Tilføjede opgaver med potensregneregler(1)

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,9 @@ foundations/fractions/03subtraction.pdf
 foundations/fractions/04multiplication.log
 
 foundations/fractions/04multiplication.pdf
+
+foundations/fractions/02addition.log
+
+*.pdf
+
+foundations/fractions/04multiplication.pdf
