--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,14 @@
+.idea/
 src/__pycache__/
 src/htmlcov/
 src/.coverage
 *.swp
-
 *.bbl
-
 *.aux
-
 *.blg
-
 *.out
-
 *.pdf
-
 *.gz
-
 *.toc
-
 *.log
-
-*.aux
-
-*.aux
-
-*.blg
-
-*.log
-
-*.out
-
-*.pdf
-
-*.gz
-
-*.bbl
-
-*.log
-
-*.pdf
-
-*.aux
-
-*.blg
-
-*.toc
-
-*.aux
-
-*.gz
-
-*.log
-
-foundations/fractions/02addition.log
-
-foundations/fractions/02addition.pdf
-
-foundations/fractions/03subtraction.log
-
-foundations/fractions/03subtraction.pdf
-
-foundations/fractions/04multiplication.log
-
-foundations/fractions/04multiplication.pdf
-
-foundations/fractions/02addition.log
-
-*.pdf
-
-foundations/fractions/04multiplication.pdf
+*.json
