--- a/src/Makefile
+++ b/src/Makefile
@@ -2,3 +2,7 @@ coveragereport:
 	coverage run nose_starter.py
 	coverage html
 	chromium-browser htmlcov/exerciseconverter_py.html
+
+tests:
+	clear
+	python3 nose_starter.py
